added to the html in the body of the doc

--- a/index.html
+++ b/index.html
@@ -51,14 +51,25 @@
     <section id="#About me">
         <img scr="">
         <h1> Sarah Attar </h1>
-        <p> I have one dog, I love the beach and I am very free spirted.</p>
+        <p> I have one dog, I love the beach and I am very free spirted.
+            I am a 23 years old who currently lives in Winter Park FL.  After accomplishing a Guinness World Record and training for the Olympics in my youth I decided to take a break from training. I then started day trading where I was first exposed to code. Helping someone build an algorithm allowed me to see just how illimitable coding really is. 
+            I learned that resources are vital to success. So I embarked on a journey of learning different cultures and building both my network and capital.
+            The next step was to start building a solid substratum for my coding knowledge. I decided that my local UCF Boot Camp was the way to start due to their meritorious programs available. 
+        </p>
     </section>
 </main>
 <!--main:projects-->
  <main>
      <article id = "projects">
-         <h1>projects
+         <h1>Projects
                       </h1>
+                      <p>
+
+         <li><strong>Project 1 Repo:</strong> <a href="https://github.com/JosephLMurray/ThatGoodDirt/">ThatGoodDirt</a></li>
+
+         <li><strong>Project 2 Repo:</strong> <a href="https://github.com/kaitdiaz01/S.N.A.C.K_Movers/">S.N.A.C.K_</a></li>
+
+                      </p>
          <!--list 6 project (put coimg soon images in place of the projects)-->
      </article>
  </main>  
