added styling to the css and changed the footer in the html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
          <!--email,linkedin, github, indeed, resume-->
 
      </section>
-     <h4>Thanks for visiting!</h4>
+     <strong>Thanks for visiting!</strong>
      <ul>
         <li><strong>Email:</strong> <a href="mailto:sarahattar76@gmail.com">sarahattar76@gmail.com</a></li>
         <!-- <li><strong>Github:</strong> <a href="https://google.com">SarahAmel</a></li> -->
