added files, moved pictures on the page and added some styling to the main

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 <main> 
     <!-- <section> -->
     <!-- <div class="container"> 
-<!-- 
         <img id='container-background-image"scr="./assets/images/"> added what image you want
-    <!-- </div> -->
+     </div> -->
 <!-- </section>  -->
 
     <section id="#About me">
-        <img scr="">
+        <!-- <img id="dog"src="./assets/images/Roscoe.jpg"> -->
+        <img id="me"src="./assets/images/selfie.png">
         <h1> Sarah Attar </h1>
         <p> I have one dog, I love the beach and I am very free spirted.
             I am a 23 years old who currently lives in Winter Park FL.  After accomplishing a Guinness World Record and training for the Olympics in my youth I decided to take a break from training. I then started day trading where I was first exposed to code. Helping someone build an algorithm allowed me to see just how illimitable coding really is. 
@@ -59,15 +59,20 @@
     </section>
 </main>
 <!--main:projects-->
- <main>
-     <article id = "projects">
+ <main id = "projects">
+     <article>
          <h1>Projects
                       </h1>
-                      <p>
-
+                       <!-- <p> -->
+                         <img id="project1"src="./assets/images/project1.png"> 
          <li><strong>Project 1 Repo:</strong> <a href="https://github.com/JosephLMurray/ThatGoodDirt/">ThatGoodDirt</a></li>
+ 
+         <!-- <img id="project1"src="./assets/images/project1.png"> --> 
+      <!-- <img id="project1"src="./assets/images/project1.png"> --> 
 
          <li><strong>Project 2 Repo:</strong> <a href="https://github.com/kaitdiaz01/S.N.A.C.K_Movers/">S.N.A.C.K_</a></li>
+
+         <img id="project2"src="./assets/images/project2.png">
 
                       </p>
          <!--list 6 project (put coimg soon images in place of the projects)-->
